added main tag an ul

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 <body>
 
 	<h1>This is a test page</h1>
+	<main>main add</main>
+	<ul>
+		<li>sanusi</li>
+		<li>bashir</li>ß
+
+	</ul>
+
 
 </body>
 </html>
