aded a link to about page

--- a/index.html
+++ b/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>A whale of Greeting</title>
 </head>
 <body>
 
-	<h1>This is a test page</h1>
-	<main>main add</main>
-	<ul>
-		<li>sanusi</li>
-		<li>bashir</li>ß
-
-	</ul>
+	<h1>Hello, World</h1>
+	<a href="about.html">About this Project</a>
+	<p>Call me Sanusi</p>
+	
 
 
 </body>
