--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 	<h1>Hello, World</h1>
 	<a href="about.html">About this Project</a>
 	<p>Call me Sanusi</p>
-	
+	<p>content</p>
+	<img src="/images/breaching_whale.jpg" alt="Decription">
+
 
 
 </body>
