add link to the page

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 
 	<h1>About</h1>
 	<p>
-		This Site is a Sample Project for the <strong>awesom</strong> Git tutorials <em>Learn Enough Git to Be Dangerous</em>
+		This Site is a Sample Project for the <strong>awesom</strong> Git tutorials <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>
 	</p>	
 
 
