change page heading

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-	<h1>About</h1>
+	<h1>About Us</h1>
 	<p>
 		This Site is a Sample Project for the <strong>awesom</strong> Git tutorials <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>
 	</p>	
